# job_tutorial

./: .gitignore  README.md  pyproject.toml  pytest.ini
_infra/: infra.toml
job_tutorial/: di_container.py  job.py
job_tutorial/_infra/: cli.py  infra.toml
job_tutorial/command/: minimal_pipeline.py  pipeline.py  pipeline_with_try.py
job_tutorial/initialiser/: container.py
job_tutorial/model/: transformer.py  value.py
job_tutorial/repo/: db.py  repo_inject.py  tutorial_table1.py  tutorial_table2.py
job_tutorial/util/: config.py  configuration.py  env.py  error.py  fn.py  json_util.py  logger.py  monad.py  parse_args.py  session.py  spark.py
tests/: conftest.py
tests/fixtures/: table1_rows.json
tests/shared/: __init__.py  config_for_test.py  db_setup.py  di.py  spark_test_session.py  table_setup.py
tests/test_command/: test_pipeline.py
tests/test_job/: test_job.py
tests/test_model/: test_transform.py
tests/test_repo/: test_table1.py  test_table2.py
tests/test_util/: test_util.py
