[tool.poetry]
name = "job-tutorial"
version = "0.1.1"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
readme = "README.md"
packages = [{include = "job_tutorial"}]
exclude = ["_infra/"]

[tool.poetry.scripts]
infra = "_infra.cli:infra_cli"

[tool.poetry.plugins."job_entry_point_group"]
job_main = "job_tutorial.job:execute"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.3.0"
delta-spark = "^2.1.0"
jobsworth = {git = "https://github.com/wildfauve/jobsworth.git", rev = "main"}
PyMonad = "^2.4.0"
pino = "^0.6.0"
dependency-injector = "^4.40.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pdbpp = "^0.10.3"
pytest-env = "^0.6.2"
pytest-mock = "^3.10.0"
databricks = "^0.2"
databricker = {git = "https://github.com/wildfauve/databricker", rev = "main"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_classes = ["*Test", "Test*", "Describe*"]
python_functions = ["test_*", "it_*"]
xfail_strict = true
log_cli = true
log_cli_level = 20
env = [
    "ENVIRONMENT=test1"
]
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
