[tool.poetry]
name = "job_tutorial"
version = "0.1.0"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
readme = "README.md"
packages = [{include = "job_tutorial"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.3.0"
delta-spark = "^2.1.0"
jobsworth = {git = "https://github.com/wildfauve/jobsworth.git", rev = "main"}
PyMonad = "^2.4.0"
pino = "^0.6.0"
dependency-injector = "^4.40.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pdbpp = "^0.10.3"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
